fix skills wraping bug

--- a/style.css
+++ b/style.css
@@ -2156,7 +2156,9 @@ header .header-icons {
             list-style-position: inside;
             position: relative;
             display: flex;
+            align-items: center;
             gap: 10px;
+            text-wrap: nowrap;
             background-image: linear-gradient(
               to right,
               var(--background-main-color),
@@ -2227,15 +2229,20 @@ header .header-icons {
           .skills-container {
             p {
               color: var(--secoundary-color);
-              display: flex;
-              gap: 5px;
+              overflow-x: scroll;
+              overflow-y: visible;
+              text-wrap: nowrap;
 
+              padding-bottom: 10px;
               .skill {
+                display: inline;
                 color: var(--secoundary-color);
                 border: 1px dashed var(--secoundary-color);
                 border-radius: 2px;
                 padding: 2px 5px;
                 text-transform: uppercase;
+                font-size: 0.6rem;
+                margin-right: 10px;
               }
 
               .skill:hover {
